--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "everyonesrefrigerator-client-vuejs",
+  "name": "vuejs_test_page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.4.0",
+    "@heroicons/vue": "^1.0.4",
     "autoprefixer": "^9",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
@@ -24,6 +26,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "@mdi/font": "^5.1.45",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
